--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -89,7 +89,7 @@ body.HasOverlay > #AppWrapper {
 
 .Dialog > .Content {
     position: relative;
-    overflow: hidden;
+    overflow-x: auto;
 }
 
 .Dialog > .Content > .InnerContent {
