added filter to hide inactive Agents/Users in AdminUser interface for better overview

--- a/Kernel/Output/HTML/Templates/Standard/AdminUser.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AdminUser.tt
@@ -120,7 +120,7 @@
 [% RenderBlockStart("OverviewResultSwitchToUser") %]
                             <th>[% Translate("Login as") | html %]</th>
 [% RenderBlockEnd("OverviewResultSwitchToUser") %]
-                            <th>[% Translate("Validity") | html %]</th>
+                            <th>[% Translate("Validity") | html %]<input class="" id="CheckboxFilterInvalid" type="checkbox"></th>
                             <th>[% Translate("Changed") | html %]</th>
                             <th>[% Translate("Created") | html %]</th>
                         </tr>
