Fixed: Set the last valid Status Merge to invalid is allowed (bug#13734).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -45,6 +45,10 @@ body.HasOverlay > #AppWrapper {
     background: #FFF;
 }
 
+.Dialog.Modal.Alert {
+    z-index: 6500;
+}
+
 .Dialog.Fullsize {
     width: 100%;
     height: 100%;
