--- a/Kernel/Output/HTML/Templates/Standard/AdminProcessManagementActivityDialog.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AdminProcessManagementActivityDialog.tt
@@ -150,13 +150,15 @@
                             </ul>
                             <ul class="AllocationList Tablelike W90pc" id="AvailableFields">
 [% RenderBlockStart("AvailableFieldRow") %]
-                                <li title="[% Translate("Name: %s", Data.FieldnameTranslated) | html %]" data-name-translated="[% Data.FieldnameTranslated | html %]" data-id="[% Data.Field | html %]" data-config="">
+                                <li title="[% Translate("Name: %s", Data.FieldnameTranslated) | html %]"  data-islayout="[% IF Data.isLayout %]1[% ELSE %]0[% END %]" data-name-translated="[% Data.FieldnameTranslated | html %]" data-id="[% Data.Field | html %]" data-config="">
                                     [% Data.FieldnameTranslated | html %]
                                     <span class="Functions ShowOnAssignedList">
                                         <a href="#" data-id="[% Data.Field | html %]" data-entity="[% Data.Field | html %]" class="FieldDetailsOverlay Icon" title="[% Translate("Edit") | html %]">
                                             <i class="fa fa-edit"></i>
                                         </a>
                                     </span>
+                                    <ul class="AllocationList Tablelike W90pc [% IF Data.isLayout %]LayoutField[% ELSE %]NonLayoutField[% END %]" id="AssignedFields[% Data.Field | html %]">
+                                    </ul>
                                 </li>
 [% RenderBlockEnd("AvailableFieldRow") %]
                             </ul>
@@ -169,13 +171,17 @@
                             </ul>
                             <ul class="AllocationList Tablelike W90pc" id="AssignedFields">
 [% RenderBlockStart("AssignedFieldRow") %]
-                                <li data-id="[% Data.Field | html %]" data-entity="[% Data.Field | html %]" data-config="[% Data.FieldConfig | html %]" title="Name: [% Translate(Data.Field) | html %]">
+                                <li data-id="[% Data.Field | html %]" data-entity="[% Data.Field | html %]" data-config="[% Data.FieldConfig | html %]" data-islayout="[% IF Data.isLayout %]1[% ELSE %]0[% END %]" title="Name: [% Translate(Data.Field) | html %]">
                                     [% Translate(Data.Field) | html %]
                                     <span class="Functions ShowOnAssignedList">
                                         <a href="#" data-id="[% Data.Field | html %]" data-entity="[% Data.Field | html %]" class="FieldDetailsOverlay Icon" title="[% Translate("Edit") | html %]">
                                             <i class="fa fa-edit"></i>
                                         </a>
                                     </span>
+
+                                    <ul class="AllocationList Tablelike W90pc [% IF Data.isLayout %]LayoutField[% ELSE %]NonLayoutField[% END %]" id="AssignedFields[% Data.Field | html %]">
+                                    </ul>
+
                                 </li>
 [% RenderBlockEnd("AssignedFieldRow") %]
                             </ul>
@@ -239,6 +245,17 @@
                     [% Data.DisplaySelection %]
                 </div>
                 <div class="Clear"></div>
+                
+                <label for="LayoutStyle" style="display:none">[% Translate("Layout Style") | html %]:</label>
+                <div id="LayoutStyleSelectionContainer" class="Field Hidden">
+                    [% Data.LayoutStyleSelection %]
+                </div>
+                <div class="Clear"></div>
+                <label for="ChildOf" style="display:none">[% Translate("Child of") | html %]:</label>
+                <div id="LayoutStyleChildOfContainer" class="Field Hidden">
+                    [% Data.LayoutChildOfSelection %]
+                </div>
+                <div class="Clear Hidden"></div>
             </fieldset>
         </div>
     </div>
