--- a/Kernel/Output/HTML/Templates/Standard/ProcessManagement/ActivityDialogHeader.tt
+++ b/Kernel/Output/HTML/Templates/Standard/ProcessManagement/ActivityDialogHeader.tt
@@ -17,21 +17,21 @@
             <div class="Content">
                 <fieldset class="TableLike FixedLabelSmall">
                     <label>[% Translate("Process") | html %]:</label>
-                    <p class="Value FixedValueSmall" title="[% Data.Process | html %]">[% Data.Process | html %]</p>
+                    <p class="Value FixedValueSmall" title="[% Translate(Data.Process) | html %]">[% Translate(Data.Process) | html %]</p>
                     <div class="Clear"></div>
                 </fieldset>
 
                 <fieldset class="TableLike FixedLabelSmall">
                     <label>[% Translate("Activity") | html %]:</label>
-                    <p class="Value FixedValueSmall" title="[% Data.Activity | html %]">[% Data.Activity | html %]</p>
+                    <p class="Value FixedValueSmall" title="[% Translate(Data.Activity) | html %]">[% Translate(Data.Activity) | html %]</p>
                     <div class="Clear"></div>
 
                     <label>[% Translate("Dialog") | html %]:</label>
-                    <p class="Value FixedValueSmall" title="[% Data.ActivityDialog | html %]">[% Data.ActivityDialog | html %]</p>
+                    <p class="Value FixedValueSmall" title="[% Translate(Data.ActivityDialog) | html %]">[% Translate(Data.ActivityDialog) | html %]</p>
                     <div class="Clear"></div>
 [% RenderBlockStart("ProcessInfoSidebarActivityDialogDesc") %]
                     <label>[% Translate("Description") | html %]:</label>
-                    <p class="Value FixedValueSmall" title="[% Data.ActivityDialogDescription | html %]">[% Data.ActivityDialogDescription | html %]</p>
+                    <p class="Value FixedValueSmall" title="[% Translate(Data.ActivityDialogDescription) | html %]">[% Translate(Data.ActivityDialogDescription) | html %]</p>
                     <div class="Clear"></div>
 [% RenderBlockEnd("ProcessInfoSidebarActivityDialogDesc") %]
                 </fieldset>
@@ -45,7 +45,7 @@
                 <h2>[% Translate("Description") | html %]</h2>
             </div>
             <div class="Content">
-                <p class="Value FixedValueSmall">[% Data.Description | html %]</p>
+                <p class="Value FixedValueSmall">[% Translate(Data.Description) | html %]</p>
                 <div class="Clear"></div>
             </div>
         </div>
@@ -68,14 +68,14 @@
 [% RenderBlockStart("Header") %]
                 <div class="Header">
                     <h1>
-                        [% Data.Name | html %]
+                        [% Translate(Data.Name) | html %]
 [% RenderBlockStart("DescriptionShort") %]
-                        - [% Data.DescriptionShort | html %]
+                        - [% Translate(Data.DescriptionShort) | html %]
 [% RenderBlockEnd("DescriptionShort") %]
                     </h1>
                     <p>
 [% RenderBlockStart("DescriptionLong") %]
-                        [% Data.DescriptionLong | html %] -
+                        [% Translate(Data.DescriptionLong) | html %] -
 [% RenderBlockEnd("DescriptionLong") %]
 [% RenderBlockStart("CancelLink") %]
                         <a class="CancelClosePopup" href="#">[% Translate("Cancel & close") | html %]</a>
