--- a/Kernel/Output/HTML/Templates/Standard/ProcessManagement/Priority.tt
+++ b/Kernel/Output/HTML/Templates/Standard/ProcessManagement/Priority.tt
@@ -13,7 +13,7 @@
 [% RenderBlockStart("rw:Priority:DescriptionLong") %]
     <span class="FieldHelpContainer">
         <i class="fa fa-question-circle FieldHelpTrigger"></i>
-        <span>[% Data.DescriptionLong | html %]</span>
+        <span>[% Translate(Data.DescriptionLong) | html %]</span>
     </span>
 [% RenderBlockEnd("rw:Priority:DescriptionLong") %]
     [% Data.Label | html %]:
@@ -23,7 +23,7 @@
     <div id="[% Data.FieldID | html %]Error" class="TooltipErrorMessage"><p>[% Translate("This field is required.") | html %]</p></div>
     <div id="[% Data.FieldID | html %]ServerError" class="TooltipErrorMessage"><p>[% Translate("This field is required.") | html %]</p></div>
 [% RenderBlockStart("rw:Priority:DescriptionShort") %]
-    <div class="FieldExplanation">[% Data.DescriptionShort | html %]</div>
+    <div class="FieldExplanation">[% Translate(Data.DescriptionShort) | html %]</div>
 [% RenderBlockEnd("rw:Priority:DescriptionShort") %]
 </div>
 <div class="Clear"></div>
