Configurable access to sensitive generic agent ops
This mod adds two SysConfig parametrs

    Ticket::GenericAgentCustomExecEnabled
    Ticket::GenericAgentRemoveEnabled

that allow one to disable custom command/module execution and/or ticket
removal functions of generic agent. May be helpful in additional system
protection.

Related: https://dev.ib.pl/ib/otrs/issues/117
Author-Change-Id: IB#1079413

--- a/Kernel/Output/HTML/Templates/Standard/AdminGenericAgent.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AdminGenericAgent.tt
@@ -810,6 +810,7 @@
                         <div class="Field">
                             [% Data.SendNoNotificationOption %]
                         </div>
+[% IF Config('Ticket::GenericAgentCustomExecEnabled') %]
                         <div class="Clear"></div>
 
                         <label for="NewCMD">[% Translate("CMD") | html %]:</label>
@@ -819,6 +820,8 @@
                                 ([% Translate("This command will be executed. ARG[0] will be the ticket number. ARG[1] the ticket id.") | html %])
                             </p>
                         </div>
+[% END %]
+[% IF Config('Ticket::GenericAgentRemoveEnabled') %]
                         <div class="Clear"></div>
 
                         <label for="NewDelete">[% Translate("Delete tickets") | html %]:</label>
@@ -828,10 +831,13 @@
                                 [% Translate("Warning: All affected tickets will be removed from the database and cannot be restored!") | html %]
                             </p>
                         </div>
+[% END %]
                         <div class="Clear"></div>
                     </fieldset>
                 </div>
             </div>
+
+[% IF Config('Ticket::GenericAgentCustomExecEnabled') %]
 
             <div class="WidgetSimple SpacingTop Collapsed">
                 <div class="Header">
@@ -898,6 +904,7 @@
                     </fieldset>
                 </div>
             </div>
+[% END %]
 
             <div class="WidgetSimple SpacingTop">
                 <div class="Header">
