Fixed: Layout issue with ticket split (bug#13700).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -105,6 +105,10 @@ body.HasOverlay > #AppWrapper {
     position: relative;
 }
 
+#AgentSplitSelection {
+    min-width: 330px;
+}
+
 #TimeLineOverflow {
     overflow-y: hidden;
     max-height: 1173px;
