--- a/scripts/auto_build/spec/templates/includes/redhat-systemd-base.tt
+++ b/scripts/auto_build/spec/templates/includes/redhat-systemd-base.tt
@@ -53,7 +53,7 @@ if id $OTRSUSER >/dev/null 2>&1; then
     [% '#' %] update home dir
     usermod -d /opt/otrs $OTRSUSER
 else
-    useradd $OTRSUSER -d /opt/otrs/ -s /bin/bash -g apache -c 'OTRS System User' && echo "$OTRSUSER added."
+    useradd -d /opt/otrs/ -s /bin/bash -g apache -c 'OTRS System User' $OTRSUSER && echo "$OTRSUSER added."
 fi
 
 
